kolorek jak z nawiacji strony

--- a/src/App.css
+++ b/src/App.css
@@ -29,11 +29,11 @@
 
 
 .NavBar {
-  background-color: cadetblue;
+  background-color: #f04510;
   height: 2rem;
   display:flex;
   align-items: center;
-justify-content: flex-end;
+  justify-content: flex-end;
   width: 100vw;
   font-family: "Lato Heavy", sans-serif;
   font-size: 1.2rem;
