--- a/src/App.css
+++ b/src/App.css
@@ -48,5 +48,28 @@
   margin: 0 0.5rem;
 }
 
+.catContainer {
+  width:70%;
+  height: 5rem;
+  display: flex;
+}
+.catContainer img {
+  height: 4rem;
+  width: auto;
+}
+
+.catContainer p{
+  display:inline-block;
+}
+
+.catContainer button{
+  display:inline-block;
+  height: 1.5rem;
+  background-color: red;
+  font-size: 1rem;
+  color: white;
+  border-radius: 5px;
+}
+
 
 
