--- a/src/App.css
+++ b/src/App.css
@@ -48,18 +48,31 @@
   margin: 0 0.5rem;
 }
 
-.catContainer {
-  width:70%;
-  height: 5rem;
+.list{
+  width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.catContainer {
+  width:60%;
+  height: 12rem;
+  display: flex;
+  margin:0;
+  justify-content: space-between;
+
 }
 .catContainer img {
-  height: 4rem;
+  height: 100%;
   width: auto;
+
 }
 
 .catContainer p{
   display:inline-block;
+  margin:0;
+  width:70%;
+  align-self: center;
 }
 
 .catContainer button{
@@ -69,7 +82,6 @@
   font-size: 1rem;
   color: white;
   border-radius: 5px;
+  justify-self:right;
 }
-
-
 
