--- a/src/App.css
+++ b/src/App.css
@@ -53,14 +53,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color:#e46140;
 }
 .catContainer {
   width:60%;
   height: 12rem;
-  display: flex;
   margin:0;
-  justify-content: space-between;
-
+  background-color: #f1f1f1;
+  padding: 2rem;
 }
 .catContainer img {
   height: 100%;
@@ -72,7 +72,6 @@
   display:inline-block;
   margin:0;
   width:70%;
-  align-self: center;
 }
 
 .catContainer button{
@@ -82,6 +81,5 @@
   font-size: 1rem;
   color: white;
   border-radius: 5px;
-  justify-self:right;
 }
 
