--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 }
 
 .list{
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,11 +61,16 @@
   margin:0;
   background-color: #f1f1f1;
   padding: 2rem;
+  display:flex;
 }
 .catContainer img {
-  height: 100%;
+  height: 11rem;
   width: auto;
 
+}
+.catContainerDescription {
+  align-self:center;
+  justify-content: space-between;
 }
 
 .catContainer p{
@@ -81,5 +86,6 @@
   font-size: 1rem;
   color: white;
   border-radius: 5px;
+  justify-self:right;
 }
 
