--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,9 @@
   background-color: #f1f1f1;
   padding: 2rem;
   display:flex;
-  max-height:6.5rem;
+  height:6.5rem;
 }
-.catContainer img {
-  max-width: 11rem;
 
-
-}
 .catContainerDescription {
   justify-content: space-between;
   flex-grow: 1;
@@ -73,7 +69,9 @@
 }
 
 .catContainerImage {
-  width: 11rem;
+  min-width: 9rem;
+  height:6.5rem;
+
 }
 
 .catContainerName {
