--- a/src/App.css
+++ b/src/App.css
@@ -32,11 +32,14 @@
 }
 
 .list{
-  width: 100vw;
+  width: 90vw;
+  margin-left:5vw;
+  margin-right:5vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color:#e46140;
+  padding-top: 20px;
 }
 .catContainer {
   width:60%;
