--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@
 }
 
 .list{
-  width: 90vw;
+  width: 88vw;
   margin-left:5vw;
   margin-right:5vw;
   display: flex;
@@ -40,6 +40,10 @@
   align-items: center;
   background-color:#e46140;
   padding-top: 20px;
+  padding-bottom: 20px;
+  border: 1px solid #dc5431;
+  border-radius: 8px;
+  box-shadow: 2px 3px 8px #aaa;
 }
 .catContainer {
   width:60%;
@@ -48,6 +52,7 @@
   padding: 2rem;
   display:flex;
   height:6.5rem;
+  box-shadow: 2px 3px 8px #aaa;
 }
 
 .catContainerDescription {
