--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
   text-align: center;
   padding-top: 6rem;
-  width: 100vw;
   min-height: 100vh;
   font-family: "Lato", sans-serif;
 }
@@ -87,4 +86,13 @@
   justify-content: center;
 }
 
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+}
+
+#root {
+  width: 100vw;
+}
 
