--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   padding-top: 6rem;
   min-height: 100vh;
   font-family: "Lato", sans-serif;
+  margin: 0;
 }
 
 .App-logo {
@@ -31,9 +32,6 @@
 }
 
 .list{
-  width: 88vw;
-  margin-left:5vw;
-  margin-right:5vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -87,12 +85,15 @@
 }
 
 #main {
+  width: auto;
   display: flex;
   flex-direction: column;
   align-items:center;
+  margin:0;
 }
 
 #root {
-  width: 100vw;
+  width: 100%;
+  margin:0;
 }
 
