--- a/src/navBar.css
+++ b/src/navBar.css
@@ -15,7 +15,6 @@ nav li{
     list-style: none;
     display: inline-block;
     margin: 5px 15px;
-    padding: 10px;
 }
 nav li:hover{
     background: #f59379;
@@ -29,7 +28,8 @@ nav ul {
 }
 
 nav a{
-    font-size: 20px;
+    display: inline-block;
+    padding: 10px;
     text-transform: uppercase;
     text-decoration: none;
     color: white;
@@ -41,8 +41,8 @@ nav a{
 
 .logo{
     float: left;
-    padding: 10px;
     width: 7rem;
+    padding-top: 4px;
     margin: 0 2rem;
 }
 
