--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
   background-color: #f1f1f1;
   padding: 2rem;
   display:flex;
-  height:6.5rem;
+  height:auto;
   box-shadow: 2px 3px 8px #aaa;
 }
 
@@ -98,7 +98,7 @@
   margin:0;
 }
 
-@media (max-width: 400px){
+@media (max-width: 1010px){
   .catContainerName {
 
   }
