import css rwd navbara dodanie pliku z obrazkiem hamburgera

--- a/src/navBar.css
+++ b/src/navBar.css
@@ -59,3 +59,16 @@ div.clear{
     display: inline;
     float: right;
 }
+
+.hamburger{
+    display:none;
+}
+
+figure{
+    padding: 0px;
+    margin: 0px;
+
+}
+input[type=checkbox]{
+    display: none;
+}
