--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,46 @@
 }
 
 @media (max-width: 1010px){
+  #logo{
+    order: 1;
+  }
+  nav ul{
+    padding: 0;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+
+  /*Show menu when invisible checkbox is checked*/
+  input[type=checkbox]:checked ~ .right-side{
+    height: 2.75rem;
+    display: flex;
+    transition: 0.2s;
+    visibility: visible;
+    padding: 0px;
+  }
+
+  .hamburger{
+    display: flex;
+    padding: 0px;
+    margin: 0px;
+    order: -99;
+  }
+
+
+  ul li figure{
+    padding: 0px;
+    margin: 0px;
+  }
+  .hamburger img{
+    height: 40px;
+  }
+
+  #navbar a.nav-link {
+    padding: 10px 20px;
+  }
+
   .catContainerName {
 
   }
