--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,16 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+#main {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  margin:0;
+}
+
+#root {
+  width: 100%;
+  margin:0;
+}
