--- a/src/navBar.css
+++ b/src/navBar.css
@@ -72,3 +72,54 @@ figure{
 input[type=checkbox]{
     display: none;
 }
+
+@media(max-width: 1060px){
+    #logo{
+        order: 1;
+    }
+    nav ul{
+        padding: 0;
+        display: flex;
+        flex-direction: column-reverse;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .right-side{
+        transition: 50ms;
+        visibility: hidden;
+        height: 0px;
+        padding: 0px;
+        margin: 0px;
+
+    }
+
+    /*Show menu when invisible checkbox is checked*/
+    input[type=checkbox]:checked ~ .right-side{
+        height: 2.75rem;
+        display: flex;
+        transition: 0.2s;
+        visibility: visible;
+        padding: 0px;
+    }
+
+    .hamburger{
+        display: flex;
+        padding: 0px;
+        margin: 0px;
+        order: -99;
+    }
+
+
+    ul li figure{
+        padding: 0px;
+        margin: 0px;
+    }
+    .hamburger img{
+        height: 40px;
+    }
+
+    #navbar a.nav-link {
+        padding: 10px 20px;
+    }
+}
