--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
   to { transform: rotate(360deg); }
 }
 
+.MessageError{
+  color: red;
+  margin: 0
+}
+
 .list{
   display: flex;
   flex-direction: column;
