--- a/src/User/css/style-form.css
+++ b/src/User/css/style-form.css
@@ -1,3 +1,9 @@
+.UserView{
+    padding-top: 6rem;
+    min-height: 100vh;
+    background: #ffffff52;
+}
+
 .if-no-user-container {
     display: flex;
     flex-wrap: wrap;
@@ -7,10 +13,11 @@
 
 .form {
     /*padding: 0 30px 42px;*/
-    border: 1px solid #ccc;
-    margin: 2rem;
-    border-radius: 10px;
     box-sizing: border-box;
+    margin: 2rem;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    background: #fff;
 }
 
 .form h2{
