--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
   min-height: 100vh;
   font-family: 'Encode Sans Semi Condensed', sans-serif;
   margin: 0;
-  background: url('https://preview.ibb.co/mQvBdy/cat_pattern3.jpg') repeat;
-  background-attachment: fixed;
+  /*background: url('https://preview.ibb.co/mQvBdy/cat_pattern3.jpg') repeat;*/
+  /*background-attachment: fixed;*/
+  background: #fff2f2;
 }
 
 .App-logo {
