--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
   background: #fff2f2;
 }
 
+h1, h2, h3, h4{
+  color: #1e262c;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
