--- a/src/List/List.css
+++ b/src/List/List.css
@@ -100,3 +100,41 @@
 .iconMars{
     color: dodgerblue;
 }
+
+.pagination {
+
+    min-width: 40%;
+    justify-content: center;
+    display:inline-flex;
+    align-items: center;
+    margin-right:0;
+    margin-left:0;
+    padding:10px;
+    border-radius: 1.5rem;
+    background-color: #e46140;
+}
+
+
+.pagination li{
+    list-style: none;
+    border: 1px solid #e46140;
+    height: 100%;
+    width: 2rem;
+    background-color: #e46140;
+
+}
+
+.pagination a{
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+
+}
+.pagination li.active {
+    background-color: #5f5e5e;
+    border-radius:10px 10px 10px 10px;
+}
+
+ul.pagination:first-child{
+border-radius:10px 10px 10px 10px;
+}
