--- a/src/User/css/style-form.css
+++ b/src/User/css/style-form.css
@@ -54,3 +54,12 @@
 form > div {
     padding: 30px 10px 10px;
 }
+
+@media(max-width: 1060px){
+    .UserView{
+        padding-top: 6rem;
+        min-height: 100vh;
+        background: #ffffff52;
+    }
+
+}
