--- a/src/CatPage/CatPage.css
+++ b/src/CatPage/CatPage.css
@@ -39,3 +39,35 @@
 h2{
     font-size: 2rem
 }
+
+@media(max-width: 1060px){
+    .CatPage {
+        background-color: antiquewhite;
+        display: flex;
+        margin-top: 2rem;
+        flex-direction: column;
+        align-items: center;
+    }
+    .catImage {
+        height: 12rem;
+        width:auto;
+        margin-top: 2rem;
+    }
+
+    .catDescription {
+        display: inline-block;
+
+        width: 100%;
+    }
+
+    .catDiv{
+        display:flex;
+        margin:0;
+        padding:0.5rem;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: center;
+        width:90%;
+    }
+
+}
