--- a/src/List/List.css
+++ b/src/List/List.css
@@ -80,6 +80,7 @@
     .catContainer p{
         width:90%;
         text-align: justify;
+        padding: 0 20px 0 20px
     }
     .catContainer{
         width: 90%;
@@ -91,6 +92,7 @@
     .list {
         width: 100%;
     }
+
 }
 
 
