ustawienie marginesów na auto

--- a/src/List/List.css
+++ b/src/List/List.css
@@ -107,10 +107,9 @@
     justify-content: center;
     display:inline-flex;
     align-items: center;
-    margin-right:0;
-    margin-left:0;
+    margin-right:auto;
+    margin-left:auto;
     padding:10px;
-    border-radius: 1.5rem;
     background-color: #e46140;
 }
 
