--- a/src/List/List.css
+++ b/src/List/List.css
@@ -92,6 +92,15 @@
     .list {
         width: 100%;
     }
+    .catContainerImage {
+        min-width: 14rem;
+        height:12rem;
+        margin: 20px;
+        border-radius: 3px;
+        box-shadow: 3px 3px 7px #272727c7;
+        background-position: center;
+
+    }
 
 }
 
