--- a/src/NavBar/navBar.css
+++ b/src/NavBar/navBar.css
@@ -89,7 +89,7 @@ input[type=checkbox]{
     background: #fff;
 }
 
-@media(max-width: 1060px){
+@media(max-width: 1150px){
     .logo{
         order: 999;
     }
@@ -107,17 +107,16 @@ input[type=checkbox]{
         height: 0px;
         padding: 0px;
         margin: 0px;
-
     }
 
     /*Show menu when invisible checkbox is checked*/
-    input[type=checkbox]:checked ~ .right-side{
+  /*  input[type=checkbox]:checked ~ .right-side{
         height: 2.75rem;
         display: flex;
         transition: 0.2s;
         visibility: visible;
         padding: 0px;
-    }
+    }*/
 
     .hamburger{
         display: flex;
