--- a/src/User/css/style-form.css
+++ b/src/User/css/style-form.css
@@ -1,9 +1,3 @@
-.UserView{
-    padding-top: 6rem;
-    min-height: 100vh;
-    background: #ffffff52;
-}
-
 .if-no-user-container {
     display: flex;
     flex-wrap: wrap;
@@ -33,7 +27,8 @@
     margin-bottom: 1rem;
     border: 1px solid #cccc;
     border-radius: 5px;
-    padding: 8px 0 8px 0px;
+    padding: 8px 6px;
+    box-sizing: border-box;
 }
 
 .form button {
