--- a/src/List/List.css
+++ b/src/List/List.css
@@ -171,3 +171,12 @@ button.CTA{
 ul.pagination{
 border-radius:5px;
 }
+
+
+/*
+.shelterPanel > div {
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 1px 1px 2px #ccc;
+}*/
