--- a/src/User/css/shelterPanel.css
+++ b/src/User/css/shelterPanel.css
@@ -11,6 +11,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    padding-top: 0;
 }
 
 .shelterPanel-cats .catContainer{
