--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,21 @@ h1, h2, h3, h4{
     color: red;
     margin: 0
 }
+.introButton{
+  height: 3rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  text-decoration: none;
+  background: #e46140;
+  color: #fff;
+  font-size: 1.2em;
+  border: 1px solid #fb5b33;
+  margin-top: 0.5rem;
+}
+.intro{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 6rem;
+}
 
