--- a/src/CatPage/CatPage.css
+++ b/src/CatPage/CatPage.css
@@ -4,7 +4,7 @@
     justify-content: space-around;
 }
 .CatPage .catDiv{
-    width: 48.8%;
+    width: 66%;
     padding: 10px;
 }
 
@@ -14,6 +14,10 @@
     border-radius: 5px;
     box-shadow: 1px 2px 2px #ccc;
     border: 1.5rem solid #fff;
+}
+
+.CatPage .catDiv.catDiv-image{
+    width: 30%;
 }
 
 .catDiv .catDescription {
