--- a/src/List/List.css
+++ b/src/List/List.css
@@ -11,7 +11,6 @@
     /*box-shadow: 2px 3px 8px #aaa;*/
 }
 .catContainer {
-    display:flex;
     width:60%;
     margin: 0.5rem;
     padding: 0.5rem;
@@ -19,6 +18,11 @@
     justify-content: center;
     background-color: #ffffffcf;
     box-shadow: 2px 3px 8px #aaa;
+}
+
+.catContainer > div{
+    display:flex;
+    justify-content: center
 }
 
 .catContainerDescription {
@@ -180,3 +184,12 @@ border-radius:5px;
     border-radius: 5px;
     box-shadow: 1px 1px 2px #ccc;
 }*/
+
+.CTA.CTA-discord{
+    background: #a08c8c;
+    border: #ff8181;
+}
+
+.CTA.CTA-discord:hover{
+    background: #5e4747;
+}
